# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: codeql.yml
include/: camera.hpp  ebo.hpp  gbuffer.hpp  lighting.hpp  material.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp  window.hpp
src/: camera.cpp  ebo.cpp  gbuffer.cpp  lighting.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
src/shaders/: basic.frag  basic.vert  buffer.frag  buffer.vert  lighting.frag  lighting.vert
